fix: z-index

--- a/shared/ui/select/style.scss
+++ b/shared/ui/select/style.scss
@@ -50,7 +50,7 @@
     border: 1px solid $dark-shade-25;
     border-radius: 0 0 4px 4px;
     position: absolute;
-    z-index: 1;
+    z-index: 2;
     left: -1px;
     top: 100%;
     background-color: #ffffff;
